kubernetes/nginx-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: microservice
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: ~
      port:
        number: 80
  rules:
  - host: ~
    http:
      paths:
      - backend:
          service:
            name: ~
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts: []
      secretName: ingress-tls-csi
